Do not process user input during saving operations

Fixes a race condition in the saving process, which is caused by
processing user input events in multiple places during save.

BUG: 409395